# Programing_Satsuki

./: .gitignore
RGZ/: CMakeLists.txt  Container.cpp  Container.h  Controller.cpp  Controller.h  Doxyfile  Menu.cpp  Menu.h  Shoes.cpp  Shoes.h  main.cpp  test.cpp
RGZ/doc/: Звіт.docx
Semestr1/doc/: lab05.odt  lab06.odt  lab08.odt  lab10.odt  lab11.odt
Semestr1/lab03/: Makefile  exersise1.c  exersise3.c  exersise4.c  exersise5.c  exersise6.c
Semestr1/lab04/: ex2.c  ex3.c  ex4  ex5.c
Semestr2/lab21/: CMakeLists.txt
Semestr2/lab21/ShareLib/: lib.c  list.c  list.h  main.c
Semestr2/lab21/ShareLib/src/: lib.h
Semestr2/lab21/ShareProject/: lib.c  list.c  list.h  main.c
Semestr2/lab21/ShareProject/src/: main.c
Semestr2/lab21/StaticLib/: Makefile  entity.h  lib.c
Semestr2/lab21/StaticLib/src/: entity.c  entity.h  lib.c
Semestr2/lab21/StaticProject/: Makefile  complex.c  complex.h  entity.c  entity.h  lab.txt  lib.c  main.c  test_complex.c
Semestr2/lab21/StaticProject/src/: main.c
doc/: lab04.odt  lab05.odt  lab06.odt  lab07.odt  lab08.odt  lab09.odt  lab10.odt
lab03/: .~іт_Klimenko_Stasya_lab03.docx  exersise1.c  exersise2.c  exersise3.c  exersise4.c  exersise5.c  exersise6.c  Звіт_Klimenko_Stasya_lab03.docx
lab04/: ex1  ex1.c  ex2  ex2.c  ex3.c  ex4.c  ex5.c  Лаб04_Клименко_Станислава_120а.odt
lab05/: ex1.c  ex2.c  ex3.c  ex4.c  ex5.c
lab06/: Makefile  Makefile.save
lab07/: ex1.c  ex2.c  ex3  ex3.c
lab11/: ex2.c  ex4.c
lab14/: CMakeLists.txt  ex1.c  ex2.c  ex3.c  ex4.c  ex5.c  ex6.c  ex7.c  ex8.c
lab15/: 1.c  2.c  3.c  4.c
(+231 files in other folders)
